# AIGP-Simulator-NN

./: .gitattributes  .gitignore  COMPETITION_ANALYSIS.md  DATA_COLLECTION_README.md  DEPLOYMENT_AND_TRAINING.md  DYNAMICS_DATA_CHAIN_README.md  ENGINE_INFO.md  README.md  ROS2_ROSBAG_README.md  requirements.txt  动力学数据链README.md  引擎信息.md  比赛解析.md
PyAIPilotExample/: controller.py  flight_command.py  keyboard_control.py  logger.py  main.py  mavlink_rx.py  requirements.txt  setup.py
checkpoints/coverage_multi_20260605_010754/: best_val_model.pt  normalization_stats.json  training_curve.csv
checkpoints/full_collect_combined_smoke_20260605_132347_plus_topup_141042/: best_val_model.pt  training_curve.csv
checkpoints/full_plus_higherror_baseline30_20260605_154651/: best_val_model.pt  training_curve.csv
checkpoints/full_plus_higherror_closedloop9_baseline40_20260609/: best_val_model.pt  training_curve.csv
configs/: train_gru.yaml  train_mlp.yaml
dynamics/collection/: launch_flightsim.py  (+1 more)
logs/: README.md
models/: dynamics_math.py  mlp_dynamics.py  neural_sim.py
ros2_ws/src/aigp_bag_tools/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/aigp_bag_tools/aigp_bag_tools/: __init__.py  conversions.py  jsonl_to_rosbag.py  rosbag_io.py  rosbag_to_dataset.py  verify_bag.py
ros2_ws/src/aigp_bag_tools/resource/: aigp_bag_tools
ros2_ws/src/aigp_bag_tools/tests/: test_conversions.py
scripts/: build_dataset.py  collect_identification_data.py  eval_one_step.py  eval_rollout.py  launch_flightsim.py  plot_rollout.py  train_mlp_dynamics.py  validate_dynamics_log.py
(+321 files in other folders)
